# strands-mcp-agent

./: .env.sample  .gitignore  Dockerfile  README.md  __init__.py  agent.py  agent_cli.py  api.py  cli.py.txt  cognito_auth.py  mcp_servers.json  model_tooluse.txt  pyproject.toml  requirements.txt
templates/: add_server.html  chat.html  connect.html  error.html  index.html  login.html  response.html  simple_chat.html  styles.css
